modificando las secciones

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -101,3 +101,8 @@ h4{
     
 }
 /*---------------------------------- perros -----------------------------------------*/
+.imgform{
+    padding: 2rem;
+    width: 15rem;
+}
+.tarjetaa{
